[package]
name = "rasbery_pi"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = { version = "2.10.1", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
chrono = {version = "0.4.38", features = ["serde"]}
dotenvy = "0.15.7"
[profile.dev]
debug = 0
